--- a/src/app/articulos/articulos.component.html
+++ b/src/app/articulos/articulos.component.html
@@ -1,18 +1,16 @@
 <h1>Articulos</h1>
-<table class="table table-hover table-stripe">
+
+<table class="table table-hover table-striped table-bordered">
 	<thead class="thead-dark">
 		<th>Titulo</th>
-		<th>ver</th>
 		<th>Editar</th>
 		<th>Eliminar</th>
 	</thead>
 	<tbody>
 		<tr>
-		<td>Ejemplo</td>
-		<td><button class="btn btn-info">Ver</button></td>	
-		<td><button class="btn btn-warning">Editar</button></td>	
-		<td><button  class="btn btn-danger">Eliminar</button></td>	
+			<td>Ejemplo</td>
+			<td><button class="btn btn-warning">Editar</button></td>
+			<td><button class="btn btn-danger">Eliminar</button></td>
 		</tr>
 	</tbody>
-
 </table>
