--- a/src/app/crear-cuenta/crear-cuenta.component.html
+++ b/src/app/crear-cuenta/crear-cuenta.component.html
@@ -1,3 +1,24 @@
-<p>
-  crear-cuenta works!
-</p>
+<h1>  Crear cuenta </h1>
+<form>
+	<div class="form-group">
+		<label>Nombre de usuario</label>
+		<input type="text" name="name" class="form-control" [(ngModel)]="formulario.user.name">
+	</div>
+
+	<div class="form-group">
+		<label>Correo electronico</label>
+		<input type="email" name="email" class="form-control" [(ngModel)]="formulario.user.email">
+	</div>
+	
+	<div class="form-group">
+		<label>Contraseña</label>
+		<input type="password" name="password" class="form-control" [(ngModel)]="formulario.user.password">
+	</div>
+
+	<div class="form-group">
+		<label>Confirmar contraseña</label>
+		<input type="password" name="password_confirmation" class="form-control" [(ngModel)]="formulario.user.password_confirmation">
+	</div>
+
+	<button class="btn btn-primary" (click)="crearCuenta()">Crear cuenta</button>
+</form>
