Ver, eliminar y crear

--- a/src/app/mostrar-articulo/mostrar-articulo.component.html
+++ b/src/app/mostrar-articulo/mostrar-articulo.component.html
@@ -1,3 +1,10 @@
-<p>
-  mostrar-articulo works!
-</p>
+<div class="card">
+	<div div class="card text" >
+  		<h2 class="card-header">
+  			{{articulo.titulo}}
+		</h2>
+  		<p class="card-text">
+  		{{articulo.contenido}}
+  		</p>
+  </div>
+</div>
