--- a/src/app/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/barra-navegacion/barra-navegacion.component.html
@@ -5,6 +5,9 @@
 		</li>
 		<li class="nav-item">
 			<a routerLink="/articulos" class="nav-link">Articulos</a>
-		</li>		
+		</li>
+		<li class="nav-item">
+			<a routerLink="/crear_articulo" class="nav-link">Articulo nuevo</a>
+		</li>	
 	</ul>	
 </nav>
