--- a/src/app/crear-articulo/crear-articulo.component.html
+++ b/src/app/crear-articulo/crear-articulo.component.html
@@ -1,3 +1,12 @@
-<p>
-  crear-articulo works!
-</p>
+<h1>Crear articulo</h1>
+<form>
+	<div class="form-group">
+		<label>Titulo</label>
+		<input type="text" name="titulo" class="form-control" [(ngModel)]="articulo.titulo">
+	</div>
+	<div class="form-group">
+		<label>Contenido</label>
+		<textarea type="text" name="contenido" class="form-control" [(ngModel)]="articulo.contenido"></textarea>
+	</div>
+	<button class="btn btn-danger" (click)="crearArticulo()">Crear Articulo</button>
+</form>
